samples/_failures_safe/1761266406_7052cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_66c72a76.c: In function ‘main’:
./samples/SAFE/__tmp_66c72a76.c:145:9: error: expected declaration or statement at end of input
  145 |         matrix_print(&b);
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_66c72a76.c:145:9: error: expected declaration or statement at end of input
